fixed white space showing to the right of the page

--- a/src/Components/Showcase/showcase.scss
+++ b/src/Components/Showcase/showcase.scss
@@ -34,6 +34,6 @@
 
 @media only screen and (max-width: 1280px) {
     .gps-platform {
-        @include displayFlex(0, 0, 0, column);
+        @include displayFlex(flex, center, center, column);
     }
 }
